--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -238,19 +238,82 @@ input[type=submit] {
     clear: both;
 }
 
+
+
+form label {
+    font-family: Sitka Subheading;
+    color: rgb(128,135,232);
+}
+
+.prenotazione {
+    width: 50%;
+    text-align: center;
+    margin-left: 20px;
+    float: left;
+}
+
+form input {
+    font-family: Sitka Subheading;
+    color: grey;
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+.button {
+    width: 20%;
+    border-radius: 50%;
+    border: solid lavender;
+}
+
+/*#logOutButton{
+    visibility:hidden;
+}*/
+#imgForm {
+    float: left;
+    height: 350px;
+    width: 40%;
+    margin-left: 20px;
+}
+
 @media screen and (max-width: 600px) {
-    .column, input[type=submit] {
+    li a {
+        float: none;
         width: 100%;
-        margin-top: 0;
     }
-    .prenotaPicture{
-        display:none;
+
+    #imgForm {
+        display: none;
     }
- /*   .topnav {
-        top: 100;
-        position:fixed;
-        margin: 0;
-        width:auto;
-        height: 50%;
-    }*/
+
+    form {
+        width: 100%;
+    }
+}
+
+/*Javascript*/
+#loginForm {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+    max-width: 300px;
+    padding: 10px;
+    background-color: white;
+}
+
+#openLoginForm {
+    background-color: #555;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 23px;
+    right: 28px;
+    width: 280px;
 }
